backend/Project/Optimizacion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> RPACKAGE ID PUNTOCOMA imports declaraciones L_codigo
Rule 2     init -> RPACKAGE ID PUNTOCOMA declaraciones L_codigo
Rule 3     imports -> imports import
Rule 4     imports -> import
Rule 5     import -> RIMPORT PARI CADENA PARD PUNTOCOMA
Rule 6     import -> RIMPORT PARI CADENA PARD
Rule 7     declaraciones -> declaraciones declaracion
Rule 8     declaraciones -> declaracion
Rule 9     declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
Rule 10    declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT
Rule 11    declaracion -> RVAR temp_list tipo PUNTOCOMA
Rule 12    declaracion -> RVAR temp_list tipo
Rule 13    temp_list -> temp_list COMA ID
Rule 14    temp_list -> ID
Rule 15    tipo -> RINT
Rule 16    tipo -> RFLOAT
Rule 17    L_codigo -> L_codigo codigo
Rule 18    L_codigo -> codigo
Rule 19    codigo -> code
Rule 20    code -> RFUNC ID PARI PARD instrucciones
Rule 21    instrucciones -> LLI instrucciones_2 LLD
Rule 22    instrucciones_2 -> instrucciones_2 instruccion
Rule 23    instrucciones_2 -> instruccion
Rule 24    instruccion -> asignacion PUNTOCOMA
Rule 25    instruccion -> label DPUNTOS
Rule 26    instruccion -> gotoS PUNTOCOMA
Rule 27    instruccion -> llamada_funcion PUNTOCOMA
Rule 28    instruccion -> cond_if
Rule 29    instruccion -> returnE PUNTOCOMA
Rule 30    instruccion -> printF PUNTOCOMA
Rule 31    label -> ID
Rule 32    gotoS -> RGOTO ID
Rule 33    returnE -> RRETURN
Rule 34    printF -> RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
Rule 35    valor -> RINT PARI expresion PARD
Rule 36    valor -> expresion
Rule 37    cond_if -> RIF expresion LLI RGOTO ID PUNTOCOMA LLD
Rule 38    access -> ID CORI RINT PARI expresion PARD CORD
Rule 39    access -> ID CORI expresion CORD
Rule 40    asignacion -> access IGUAL expresion
Rule 41    asignacion -> ID IGUAL expresion
Rule 42    asignacion -> ID IGUAL access
Rule 43    llamada_funcion -> ID PARI PARD
Rule 44    expresion -> expresion MAS expresion
Rule 45    expresion -> expresion MENOS expresion
Rule 46    expresion -> expresion POR expresion
Rule 47    expresion -> expresion DIV expresion
Rule 48    expresion -> expresion OR expresion
Rule 49    expresion -> expresion AND expresion
Rule 50    expresion -> expresion IGUALDAD expresion
Rule 51    expresion -> expresion DIFERENTE expresion
Rule 52    expresion -> expresion MAYOR expresion
Rule 53    expresion -> expresion MENOR expresion
Rule 54    expresion -> expresion MAYORI expresion
Rule 55    expresion -> expresion MENORI expresion
Rule 56    expresion -> expresion POT expresion
Rule 57    expresion -> expresion MOD expresion
Rule 58    expresion -> PARI expresion PARD
Rule 59    expresion -> ENTERO
Rule 60    expresion -> ID
Rule 61    expresion -> MENOS ENTERO
Rule 62    expresion -> DECIMAL
Rule 63    expresion -> RMATH PUNTO RMOD PARI expresion COMA expresion PARD

Terminals, with rules where they appear

AND                  : 49
CADENA               : 5 6 34
COMA                 : 13 34 63
CORD                 : 9 10 38 39
CORI                 : 9 10 38 39
DECIMAL              : 62
DIFERENTE            : 51
DIV                  : 47
DPUNTOS              : 25
ENTERO               : 9 10 59 61
ID                   : 1 2 13 14 20 31 32 37 38 39 41 42 43 60
IGUAL                : 40 41 42
IGUALDAD             : 50
LLD                  : 21 37
LLI                  : 21 37
MAS                  : 44
MAYOR                : 52
MAYORI               : 54
MENOR                : 53
MENORI               : 55
MENOS                : 45 61
MOD                  : 57
OR                   : 48
PARD                 : 5 6 20 34 35 38 43 58 63
PARI                 : 5 6 20 34 35 38 43 58 63
POR                  : 46
POT                  : 56
PUNTO                : 34 63
PUNTOCOMA            : 1 2 5 9 11 24 26 27 29 30 37
RFLOAT               : 9 10 16
RFMT                 : 34
RFUNC                : 20
RGOTO                : 32 37
RIF                  : 37
RIMPORT              : 5 6
RINT                 : 15 35 38
RMATH                : 63
RMOD                 : 63
RPACKAGE             : 1 2
RPRINTF              : 34
RRETURN              : 33
RVAR                 : 9 10 11 12
error                : 

Nonterminals, with rules where they appear

L_codigo             : 1 2 17
access               : 40 42
asignacion           : 24
code                 : 19
codigo               : 17 18
cond_if              : 28
declaracion          : 7 8
declaraciones        : 1 2 7
expresion            : 35 36 37 38 39 40 41 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 63 63
gotoS                : 26
import               : 3 4
imports              : 1 3
init                 : 0
instruccion          : 22 23
instrucciones        : 20
instrucciones_2      : 21 22
label                : 25
llamada_funcion      : 27
printF               : 30
returnE              : 29
temp_list            : 9 10 11 12 13
tipo                 : 11 12
valor                : 34

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . RPACKAGE ID PUNTOCOMA imports declaraciones L_codigo
    (2) init -> . RPACKAGE ID PUNTOCOMA declaraciones L_codigo

    RPACKAGE        shift and go to state 2

    init                           shift and go to state 1

state 1

    (0) S' -> init .



state 2

    (1) init -> RPACKAGE . ID PUNTOCOMA imports declaraciones L_codigo
    (2) init -> RPACKAGE . ID PUNTOCOMA declaraciones L_codigo

    ID              shift and go to state 3


state 3

    (1) init -> RPACKAGE ID . PUNTOCOMA imports declaraciones L_codigo
    (2) init -> RPACKAGE ID . PUNTOCOMA declaraciones L_codigo

    PUNTOCOMA       shift and go to state 4


state 4

    (1) init -> RPACKAGE ID PUNTOCOMA . imports declaraciones L_codigo
    (2) init -> RPACKAGE ID PUNTOCOMA . declaraciones L_codigo
    (3) imports -> . imports import
    (4) imports -> . import
    (7) declaraciones -> . declaraciones declaracion
    (8) declaraciones -> . declaracion
    (5) import -> . RIMPORT PARI CADENA PARD PUNTOCOMA
    (6) import -> . RIMPORT PARI CADENA PARD
    (9) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT
    (11) declaracion -> . RVAR temp_list tipo PUNTOCOMA
    (12) declaracion -> . RVAR temp_list tipo

    RIMPORT         shift and go to state 9
    RVAR            shift and go to state 10

    imports                        shift and go to state 5
    declaraciones                  shift and go to state 6
    import                         shift and go to state 7
    declaracion                    shift and go to state 8

state 5

    (1) init -> RPACKAGE ID PUNTOCOMA imports . declaraciones L_codigo
    (3) imports -> imports . import
    (7) declaraciones -> . declaraciones declaracion
    (8) declaraciones -> . declaracion
    (5) import -> . RIMPORT PARI CADENA PARD PUNTOCOMA
    (6) import -> . RIMPORT PARI CADENA PARD
    (9) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT
    (11) declaracion -> . RVAR temp_list tipo PUNTOCOMA
    (12) declaracion -> . RVAR temp_list tipo

    RIMPORT         shift and go to state 9
    RVAR            shift and go to state 10

    declaraciones                  shift and go to state 11
    import                         shift and go to state 12
    declaracion                    shift and go to state 8

state 6

    (2) init -> RPACKAGE ID PUNTOCOMA declaraciones . L_codigo
    (7) declaraciones -> declaraciones . declaracion
    (17) L_codigo -> . L_codigo codigo
    (18) L_codigo -> . codigo
    (9) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT
    (11) declaracion -> . RVAR temp_list tipo PUNTOCOMA
    (12) declaracion -> . RVAR temp_list tipo
    (19) codigo -> . code
    (20) code -> . RFUNC ID PARI PARD instrucciones

    RVAR            shift and go to state 10
    RFUNC           shift and go to state 17

    L_codigo                       shift and go to state 13
    declaracion                    shift and go to state 14
    codigo                         shift and go to state 15
    code                           shift and go to state 16

state 7

    (4) imports -> import .

    RIMPORT         reduce using rule 4 (imports -> import .)
    RVAR            reduce using rule 4 (imports -> import .)


state 8

    (8) declaraciones -> declaracion .

    RVAR            reduce using rule 8 (declaraciones -> declaracion .)
    RFUNC           reduce using rule 8 (declaraciones -> declaracion .)


state 9

    (5) import -> RIMPORT . PARI CADENA PARD PUNTOCOMA
    (6) import -> RIMPORT . PARI CADENA PARD

    PARI            shift and go to state 18


state 10

    (9) declaracion -> RVAR . temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> RVAR . temp_list CORI ENTERO CORD RFLOAT
    (11) declaracion -> RVAR . temp_list tipo PUNTOCOMA
    (12) declaracion -> RVAR . temp_list tipo
    (13) temp_list -> . temp_list COMA ID
    (14) temp_list -> . ID

    ID              shift and go to state 20

    temp_list                      shift and go to state 19

state 11

    (1) init -> RPACKAGE ID PUNTOCOMA imports declaraciones . L_codigo
    (7) declaraciones -> declaraciones . declaracion
    (17) L_codigo -> . L_codigo codigo
    (18) L_codigo -> . codigo
    (9) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> . RVAR temp_list CORI ENTERO CORD RFLOAT
    (11) declaracion -> . RVAR temp_list tipo PUNTOCOMA
    (12) declaracion -> . RVAR temp_list tipo
    (19) codigo -> . code
    (20) code -> . RFUNC ID PARI PARD instrucciones

    RVAR            shift and go to state 10
    RFUNC           shift and go to state 17

    L_codigo                       shift and go to state 21
    declaracion                    shift and go to state 14
    codigo                         shift and go to state 15
    code                           shift and go to state 16

state 12

    (3) imports -> imports import .

    RIMPORT         reduce using rule 3 (imports -> imports import .)
    RVAR            reduce using rule 3 (imports -> imports import .)


state 13

    (2) init -> RPACKAGE ID PUNTOCOMA declaraciones L_codigo .
    (17) L_codigo -> L_codigo . codigo
    (19) codigo -> . code
    (20) code -> . RFUNC ID PARI PARD instrucciones

    $end            reduce using rule 2 (init -> RPACKAGE ID PUNTOCOMA declaraciones L_codigo .)
    RFUNC           shift and go to state 17

    codigo                         shift and go to state 22
    code                           shift and go to state 16

state 14

    (7) declaraciones -> declaraciones declaracion .

    RVAR            reduce using rule 7 (declaraciones -> declaraciones declaracion .)
    RFUNC           reduce using rule 7 (declaraciones -> declaraciones declaracion .)


state 15

    (18) L_codigo -> codigo .

    RFUNC           reduce using rule 18 (L_codigo -> codigo .)
    $end            reduce using rule 18 (L_codigo -> codigo .)


state 16

    (19) codigo -> code .

    RFUNC           reduce using rule 19 (codigo -> code .)
    $end            reduce using rule 19 (codigo -> code .)


state 17

    (20) code -> RFUNC . ID PARI PARD instrucciones

    ID              shift and go to state 23


state 18

    (5) import -> RIMPORT PARI . CADENA PARD PUNTOCOMA
    (6) import -> RIMPORT PARI . CADENA PARD

    CADENA          shift and go to state 24


state 19

    (9) declaracion -> RVAR temp_list . CORI ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> RVAR temp_list . CORI ENTERO CORD RFLOAT
    (11) declaracion -> RVAR temp_list . tipo PUNTOCOMA
    (12) declaracion -> RVAR temp_list . tipo
    (13) temp_list -> temp_list . COMA ID
    (15) tipo -> . RINT
    (16) tipo -> . RFLOAT

    CORI            shift and go to state 25
    COMA            shift and go to state 28
    RINT            shift and go to state 29
    RFLOAT          shift and go to state 26

    tipo                           shift and go to state 27

state 20

    (14) temp_list -> ID .

    CORI            reduce using rule 14 (temp_list -> ID .)
    COMA            reduce using rule 14 (temp_list -> ID .)
    RINT            reduce using rule 14 (temp_list -> ID .)
    RFLOAT          reduce using rule 14 (temp_list -> ID .)


state 21

    (1) init -> RPACKAGE ID PUNTOCOMA imports declaraciones L_codigo .
    (17) L_codigo -> L_codigo . codigo
    (19) codigo -> . code
    (20) code -> . RFUNC ID PARI PARD instrucciones

    $end            reduce using rule 1 (init -> RPACKAGE ID PUNTOCOMA imports declaraciones L_codigo .)
    RFUNC           shift and go to state 17

    codigo                         shift and go to state 22
    code                           shift and go to state 16

state 22

    (17) L_codigo -> L_codigo codigo .

    RFUNC           reduce using rule 17 (L_codigo -> L_codigo codigo .)
    $end            reduce using rule 17 (L_codigo -> L_codigo codigo .)


state 23

    (20) code -> RFUNC ID . PARI PARD instrucciones

    PARI            shift and go to state 30


state 24

    (5) import -> RIMPORT PARI CADENA . PARD PUNTOCOMA
    (6) import -> RIMPORT PARI CADENA . PARD

    PARD            shift and go to state 31


state 25

    (9) declaracion -> RVAR temp_list CORI . ENTERO CORD RFLOAT PUNTOCOMA
    (10) declaracion -> RVAR temp_list CORI . ENTERO CORD RFLOAT

    ENTERO          shift and go to state 32


state 26

    (16) tipo -> RFLOAT .

    PUNTOCOMA       reduce using rule 16 (tipo -> RFLOAT .)
    RVAR            reduce using rule 16 (tipo -> RFLOAT .)
    RFUNC           reduce using rule 16 (tipo -> RFLOAT .)


state 27

    (11) declaracion -> RVAR temp_list tipo . PUNTOCOMA
    (12) declaracion -> RVAR temp_list tipo .

    PUNTOCOMA       shift and go to state 33
    RVAR            reduce using rule 12 (declaracion -> RVAR temp_list tipo .)
    RFUNC           reduce using rule 12 (declaracion -> RVAR temp_list tipo .)


state 28

    (13) temp_list -> temp_list COMA . ID

    ID              shift and go to state 34


state 29

    (15) tipo -> RINT .

    PUNTOCOMA       reduce using rule 15 (tipo -> RINT .)
    RVAR            reduce using rule 15 (tipo -> RINT .)
    RFUNC           reduce using rule 15 (tipo -> RINT .)


state 30

    (20) code -> RFUNC ID PARI . PARD instrucciones

    PARD            shift and go to state 35


state 31

    (5) import -> RIMPORT PARI CADENA PARD . PUNTOCOMA
    (6) import -> RIMPORT PARI CADENA PARD .

    PUNTOCOMA       shift and go to state 36
    RIMPORT         reduce using rule 6 (import -> RIMPORT PARI CADENA PARD .)
    RVAR            reduce using rule 6 (import -> RIMPORT PARI CADENA PARD .)


state 32

    (9) declaracion -> RVAR temp_list CORI ENTERO . CORD RFLOAT PUNTOCOMA
    (10) declaracion -> RVAR temp_list CORI ENTERO . CORD RFLOAT

    CORD            shift and go to state 37


state 33

    (11) declaracion -> RVAR temp_list tipo PUNTOCOMA .

    RVAR            reduce using rule 11 (declaracion -> RVAR temp_list tipo PUNTOCOMA .)
    RFUNC           reduce using rule 11 (declaracion -> RVAR temp_list tipo PUNTOCOMA .)


state 34

    (13) temp_list -> temp_list COMA ID .

    CORI            reduce using rule 13 (temp_list -> temp_list COMA ID .)
    COMA            reduce using rule 13 (temp_list -> temp_list COMA ID .)
    RINT            reduce using rule 13 (temp_list -> temp_list COMA ID .)
    RFLOAT          reduce using rule 13 (temp_list -> temp_list COMA ID .)


state 35

    (20) code -> RFUNC ID PARI PARD . instrucciones
    (21) instrucciones -> . LLI instrucciones_2 LLD

    LLI             shift and go to state 39

    instrucciones                  shift and go to state 38

state 36

    (5) import -> RIMPORT PARI CADENA PARD PUNTOCOMA .

    RIMPORT         reduce using rule 5 (import -> RIMPORT PARI CADENA PARD PUNTOCOMA .)
    RVAR            reduce using rule 5 (import -> RIMPORT PARI CADENA PARD PUNTOCOMA .)


state 37

    (9) declaracion -> RVAR temp_list CORI ENTERO CORD . RFLOAT PUNTOCOMA
    (10) declaracion -> RVAR temp_list CORI ENTERO CORD . RFLOAT

    RFLOAT          shift and go to state 40


state 38

    (20) code -> RFUNC ID PARI PARD instrucciones .

    RFUNC           reduce using rule 20 (code -> RFUNC ID PARI PARD instrucciones .)
    $end            reduce using rule 20 (code -> RFUNC ID PARI PARD instrucciones .)


state 39

    (21) instrucciones -> LLI . instrucciones_2 LLD
    (22) instrucciones_2 -> . instrucciones_2 instruccion
    (23) instrucciones_2 -> . instruccion
    (24) instruccion -> . asignacion PUNTOCOMA
    (25) instruccion -> . label DPUNTOS
    (26) instruccion -> . gotoS PUNTOCOMA
    (27) instruccion -> . llamada_funcion PUNTOCOMA
    (28) instruccion -> . cond_if
    (29) instruccion -> . returnE PUNTOCOMA
    (30) instruccion -> . printF PUNTOCOMA
    (40) asignacion -> . access IGUAL expresion
    (41) asignacion -> . ID IGUAL expresion
    (42) asignacion -> . ID IGUAL access
    (31) label -> . ID
    (32) gotoS -> . RGOTO ID
    (43) llamada_funcion -> . ID PARI PARD
    (37) cond_if -> . RIF expresion LLI RGOTO ID PUNTOCOMA LLD
    (33) returnE -> . RRETURN
    (34) printF -> . RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
    (38) access -> . ID CORI RINT PARI expresion PARD CORD
    (39) access -> . ID CORI expresion CORD

    ID              shift and go to state 51
    RGOTO           shift and go to state 52
    RIF             shift and go to state 53
    RRETURN         shift and go to state 54
    RFMT            shift and go to state 55

    instrucciones_2                shift and go to state 41
    instruccion                    shift and go to state 42
    asignacion                     shift and go to state 43
    label                          shift and go to state 44
    gotoS                          shift and go to state 45
    llamada_funcion                shift and go to state 46
    cond_if                        shift and go to state 47
    returnE                        shift and go to state 48
    printF                         shift and go to state 49
    access                         shift and go to state 50

state 40

    (9) declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT . PUNTOCOMA
    (10) declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT .

    PUNTOCOMA       shift and go to state 56
    RVAR            reduce using rule 10 (declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT .)
    RFUNC           reduce using rule 10 (declaracion -> RVAR temp_list CORI ENTERO CORD RFLOAT .)


state 41

    (21) instrucciones -> LLI instrucciones_2 . LLD
    (22) instrucciones_2 -> instrucciones_2 . instruccion
    (24) instruccion -> . asignacion PUNTOCOMA
    (25) instruccion -> . label DPUNTOS
    (26) instruccion -> . gotoS PUNTOCOMA
    (27) instruccion -> . llamada_funcion PUNTOCOMA
    (28) instruccion -> . cond_if
    (29) instruccion -> . returnE PUNTOCOMA
    (30) instruccion -> . printF PUNTOCOMA
    (40) asignacion -> . access IGUAL expresion
    (41) asignacion -> . ID IGUAL expresion
    (42) asignacion -> . ID IGUAL access
    (31) label -> . ID
    (32) gotoS -> . RGOTO ID
    (43) llamada_funcion -> . ID PARI PARD
    (37) cond_if -> . RIF expresion LLI RGOTO ID PUNTOCOMA LLD
    (33) returnE -> . RRETURN
    (34) printF -> . RFMT PUNTO RPRINTF PARI CADENA COMA valor PARD
    (38) access -> . ID CORI RINT PARI expresion PARD CORD
    (39) access -> . ID CORI expresion CORD

    LLD             shift and go to state 57
    ID              shift and go to state 51
    RGOTO           shift and go to state 52
    RIF             shift and go to state 53
    RRETURN         shift and go to state 54
    RFMT            shift and go to state 55

    instruccion                    shift and go to state 58
    asignacion                     shift and go to state 43
    label                          shift and go to state 44
    gotoS                          shift and go to state 45
    llamada_funcion                shift and go to state 46
    cond_if                        shift and go to state 47
    returnE                        shift and go to state 48
    printF                         shift and go to state 49
    access                         shift and go to state 50

state 42

    (23) instrucciones_2 -> instruccion .

    LLD             reduce using rule 23 (instrucciones_2 -> instruccion .)
    ID              reduce using rule 23 (instrucciones_2 -> instruccion .)
    RGOTO           reduce using rule 23 (instrucciones_2 -> instruccion .)
    RIF             reduce using rule 23 (instrucciones_2 -> instruccion .)
    RRETURN         reduce using rule 23 (instrucciones_2 -> instruccion .)
    RFMT            reduce using rule 23 (instrucciones_2 -> instruccion .)


state 43

    (24) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 59


state 44

    (25) instruccion -> label . DPUNTOS

    DPUNTOS         shift and go to state 60


state 45

    (26) instruccion -> gotoS . PUNTOCOMA

    PUNTOCOMA       shift and go to state 61


state 46

    (27) instruccion -> llamada_funcion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 62


state 47

    (28) instruccion -> cond_if .
